edit docker-compose.yml for running on swarm.

--- a/ex4/docker-compose.yml
+++ b/ex4/docker-compose.yml
@@ -1,14 +1,22 @@
 version: "3.4"
 services:
   jenkinsmaster:
-   image: my_jenkins
+   image: levep79/my_jenkins
+   deploy:
+     placement:
+       constraints:
+         - node.hostname == Lev-Lt
    volumes:
      - jenkins_home:/var/jenkins_home
      - jenkins_log:/var/log/jenkins
    ports:
     - "50000:50000"
   jenkinsnginx:
-   image: my_nginx
+   image: levep79/my_nginx
+   deploy:
+     placement:
+       constraints:
+         - node.hostname == Lev-Lt
    ports:
     - "80:80"
 networks:
